# open-core-ai-models

./: .gitattributes  .gitignore  .gitmodules  README.md
models/LFM2.5-230M/: README.md  export_lfm2_230m.py  generate_demo.py  run_aimodel_check.py  verify_lfm2_230m.py
models/LFM2.5-230M/exports/lfm2_5_230m_decode_fp16/: metadata.json
models/LFM2.5-230M/exports/lfm2_5_230m_decode_int8lin/: UPSTREAM_README.md  metadata.json
models/PocketTTS/pocket-tts-coreai/: .gitignore  MODEL_CARD.md  README.md
models/PocketTTS/pocket-tts-coreai/conversion/: CONVERSION.md  capture_oracle.py  export.py  generate.py  package.py  requirements.txt  verify_eager.py  verify_package.py
models/PocketTTS/pocket-tts-coreai/swift/: Package.swift
models/VibeVoice/CoreAIVibeVoice/: Package.resolved  Package.swift
models/VibeVoice/VibeVoiceCoreAI/export/: convert_voices.py  export_llm.py  (+11 more)
models/pocket-tts-cai/: .dockerignore  .gitignore  README.md  pyproject.toml
models/pocket-tts-cai/docker/: Dockerfile.coreai
models/pocket-tts-cai/models/coreai/pocket-tts-english/: metadata.json
models/pocket-tts-cai/models/coreai/pocket-tts-english/flow_lm_context_step.aimodel/: main.hash  main.mlirb
models/pocket-tts-cai/models/coreai/pocket-tts-english/mimi_decode_chunk.aimodel/: main.hash  main.mlirb
models/pocket-tts-cai/models/coreai/pocket-tts-english/text_conditioner.aimodel/: main.hash  main.mlirb
models/pocket-tts-cai/scripts/: check_environment.py  convert_pocket_tts_to_coreai.py  download_hf_assets.py
models/pocket-tts-cai/src/pocket_tts_coreai/: __init__.py  wrappers.py
(+115 files in other folders)
