[project]
name = "pocket-tts-cai"
version = "0.1.0"
description = "Conversion workspace for bringing Kyutai Pocket TTS tensor submodules to Apple Core AI."
requires-python = ">=3.10,<3.15"
dependencies = [
    "huggingface-hub>=0.13.0",
    "numpy>=2",
    "pocket-tts>=2.1.0",
    "safetensors>=0.4.0",
    "scipy>=1.5.0",
    "soundfile>=0.12.0",
    "torch>=2.5.0",
]

[project.optional-dependencies]
conversion = [
    "coreai-torch==0.4.0",
]

[tool.ruff]
line-length = 100
